# cleedpy

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build-image.yml  ci.yml  publish.yml
cleedpy/: config.py  preprocess.py  preprocessing.py  rfactor.py  search.py
cleedpy/cleed/: CMakeLists.txt  Makefile  Makefile_LINUXBLAS  Makefile_OPENBLAS  cribasfun.c  lbmgen.c  lbmselect.c  lbmset.c  leed.c  linpbullayer.c  linpdebtemp.c  linpmatlm.c  linpovllayer.c  linpphase.c  linpphasend.c  linprdbulnd.c  linprdovlnd.c  linprdpar.c  linpshowbop.c  lld2lay.c  lld2layrpm.c  lld2n.c  lldpotstep.c  lldpotstep0.c  lmsbravl.c  lmsbravlnd.c  lmscompl.c  lmscomplnd.c  lmslsumii.c  lmslsumij.c  lmsltok.c  lmspartinv.c  lmstmatii.c  lmstmatij.c  lmstmatndii.c  lmsymat.c  lmsymatset.c  lmsymmat.c  lmsypy.c  loutbmlist.c  (+44 more)
cleedpy/cleed/cmake/: FindOpenBLAS.cmake
cleedpy/cleed/include/: cpl.h  cpl_func.h  cpl_macr.h  dla.h  gh_stddef.h  leed.h  leed_def.h  leed_func.h  leed_ver_sym.h  leed_ver_temp.h  mat.h  mat_blas.h  mat_def.h  mat_func.h  mat_lapack.h  qm_func.h  real.h
cleedpy/cleed/src/: CMakeLists.txt  lbmgen.c  lbmselect.c  lbmset.c  leed.c  linpbullayer.c  linpdebtemp.c  linpmatlm.c  linpphase.c  linpphasend.c  linprdbulnd.c  linprdovlnd.c  linpshowbop.c  lld2layrpm.c  lld2n.c  lldpotstep.c  lldpotstep0.c  lmsbravl.c  lmsbravlnd.c  lmscompl.c  lmscomplnd.c  lmslsumii.c  lmslsumij.c  lmsltok.c  lmspartinv.c  lmstmatii.c  lmstmatij.c  lmstmatndii.c  lmsymat.c  lmsymatset.c  lmsymmat.c  loutbmlist.c  louthead.c  loutint.c  lpcmkms.c  lpcmktl.c  lpcmktlnd.c  lpcmktlnd_read.c  lpctemtl.c  lpcupdate.c  (+4 more)
cleedpy/cleed/src/libmat/: CMakeLists.txt  matalloc.c  matarralloc.c  matcblasaux_lp.c  matcheck.c  matclu.c  matcol.c  matdiff.c  matfree.c  mathead.c  matins.c  matinv_lp.c  matnattovht.c  matread.c  matrlu.c  matrm.c  matrow.c  matshow.c  matshowabs.c  matwrite.c
cleedpy/cli/: generate_schema.py  leed.py  rfactor.py  search.py  validate_parameters.py
cleedpy/config/: bulk.py
cleedpy/interface/: cleed.py  matrix.py
cleedpy/physics/: constants.py
docs/: FIG_RU001_IV.eps  FIG_RU001_YR.eps  Fig_LEED_Screen.eps  cleed_manual_full.md  cleed_manual_gfm.md  index.md
examples/: cleed.yml
examples/cleed_example_new/: Ni111_Cu.yml
examples/cleed_example_old/: Ni111_Cu.inp  leed.res_new  leed.res_origin  run.sh
examples/cleedpy_example_intermediate/: beams.txt  iv_curves.txt  iv_curves_new.txt  iv_curves_new_exp.txt  run.sh
examples/ni111_2x2O/: beams.txt  leed.inp  run_cleedpy.sh
examples/ni111_2x2O_leed/: run.sh
examples/ni111_2x2O_leed_only/: iv_curves.txt
examples/ni111_cu_leed/: leed.inp
examples/ni111_cu_search/: input.yml  run.sh
examples/rfactor/: input.yaml
examples/search/: input.yaml
tests/: curves_helper.py  test_config.py  test_preprocessing.py  test_rfactor.py  test_search.py
tests/resources/: test_config.yaml
tests/test_leed/: test_leed.py
